--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Arvind Devkate
-logo: images.png
+logo: image.jpeg
 # #description: text below image
 # show_downloads: true
 theme: jekyll-theme-minimal
