--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,7 @@ title: Arvind Devkate
 logo: image.jpeg
 # #description: text below image
 # show_downloads: true
-theme: jekyll-theme-hacker
+theme: jekyll-theme-minimal
+
 
 
